@@ -5,15 +5,17 @@ import com.linkedin.data.template.RecordTemplate;
 import com.linkedin.metadata.aspect.patch.template.ArrayMergingTemplate;
 import com.linkedin.structured.StructuredProperties;
 import com.linkedin.structured.StructuredPropertyValueAssignmentArray;
-import java.util.List;
+import java.util.Collections;
 import javax.annotation.Nonnull;
 
 public class StructuredPropertiesTemplate implements ArrayMergingTemplate<StructuredProperties> {
 
   private static final String PROPERTIES_FIELD_NAME = "properties";
   private static final String URN_FIELD_NAME = "propertyUrn";
-  private static final String ATTRIBUTION_SOURCE =
-      "attribution" + UNIT_SEPARATOR_DELIMITER + "source";
+
+  //  private static final String AUDIT_STAMP_FIELD = "auditStamp";
+  //  private static final String TIME_FIELD = "time";
+  //  private static final String ACTOR_FIELD = "actor";
 
   @Override
   public StructuredProperties getSubtype(RecordTemplate recordTemplate) throws ClassCastException {
@@ -33,6 +35,8 @@ public class StructuredPropertiesTemplate implements ArrayMergingTemplate<Struct
   public StructuredProperties getDefault() {
     StructuredProperties structuredProperties = new StructuredProperties();
     structuredProperties.setProperties(new StructuredPropertyValueAssignmentArray());
+    //    .setAuditStamp(new
+    // AuditStamp().setActor(UrnUtils.getUrn(SYSTEM_ACTOR)).setTime(System.currentTimeMillis()));
     return structuredProperties;
   }
 
@@ -40,13 +44,13 @@ public class StructuredPropertiesTemplate implements ArrayMergingTemplate<Struct
   @Override
   public JsonNode transformFields(JsonNode baseNode) {
     return arrayFieldToMap(
-        baseNode, PROPERTIES_FIELD_NAME, List.of(URN_FIELD_NAME, ATTRIBUTION_SOURCE));
+        baseNode, PROPERTIES_FIELD_NAME, Collections.singletonList(URN_FIELD_NAME));
   }
 
   @Nonnull
   @Override
   public JsonNode rebaseFields(JsonNode patched) {
     return transformedMapToArray(
-        patched, PROPERTIES_FIELD_NAME, List.of(URN_FIELD_NAME, ATTRIBUTION_SOURCE));
+        patched, PROPERTIES_FIELD_NAME, Collections.singletonList(URN_FIELD_NAME));
   }
 }
